--- a/vscode/daHtml.html
+++ b/vscode/daHtml.html
@@ -5,8 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BarbarianStacko</title>
+    <script src="daScript.js"></script>
+    <link rel="stylesheet" href="daCSS.css" type="text/css">
 </head>
 <body>
-    
+    <nav>
+        <button>Home</button>
+        <button>Merch</button>
+        <button>About Us</button>
+    </nav>
 </body>
 </html>
