--- a/vscode/daHtml.html
+++ b/vscode/daHtml.html
@@ -5,14 +5,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BarbarianStacko</title>
-    <script src="daScript.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="daCSS.css" type="text/css">
 </head>
 <body>
-    <nav>
-        <button>Home</button>
-        <button>Merch</button>
-        <button>About Us</button>
-    </nav>
+    <header class="landing">
+        <div class="container">
+            <img src="Images\kelly-sikkema-56w-xo2ZZM4-unsplash.jpg" alt="logo" class="logo">
+
+            <nav>
+                <ul class="nav-links">
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">Merch</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <main>
+        <h1>Home Page</h1>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium dolores ab unde fuga dolorum eaque aut dicta quos deserunt quibusdam ipsam quod impedit, repellendus quo facere tenetur quam dignissimos doloribus.
+        Odit recusandae id ratione atque facilis nulla, eius laborum nostrum facere eum ipsam debitis delectus ex consequatur velit asperiores eligendi illum eveniet quibusdam vitae mollitia beatae officia assumenda! Laboriosam, illo.</p>
+    </main>
+    <footer>
+        <p>Created by Dylan</p>
+    </footer>
+    <script src="daScript.js"></script>
 </body>
 </html>
