--- a/vscode/daHtml.html
+++ b/vscode/daHtml.html
@@ -26,8 +26,7 @@
     </header>
     <main>
         <h1>Home Page</h1>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium dolores ab unde fuga dolorum eaque aut dicta quos deserunt quibusdam ipsam quod impedit, repellendus quo facere tenetur quam dignissimos doloribus.
-        Odit recusandae id ratione atque facilis nulla, eius laborum nostrum facere eum ipsam debitis delectus ex consequatur velit asperiores eligendi illum eveniet quibusdam vitae mollitia beatae officia assumenda! Laboriosam, illo.</p>
+        <p>Welcome this is our hompage, please feel relaxed while on here.</p>
     </main>
     <footer>
         <p>Created by Dylan</p>
